--- a/style.css
+++ b/style.css
@@ -5,45 +5,98 @@
 
 .hide {
     display: none;
+    /*visibility: hidden;*/
 }
 
-.book-results {
+.active {
+    color: lightgreen;
+    font-size: 18px;
+}
+
+.in-active {
+    color: lightgray;
+}
+
+header {
+    width: 600px;
+    height: 65px;
+    /*border: 1px solid black;
+    border-radius: 5px;*/
+}
+
+.title {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.tag-line {
+    margin-top: 10px;
+}
+
+main {
+    margin-top: 55px;
+    width: 1000px;
+    height: 65px;
+    /*border: 1px solid black;
+    border-radius: 5px;*/
+}
+
+form {
+    margin-top: 35px;
+}
+
+.results {
     margin-top: 40px;
-    height: 455px;
-    width: 280px;
+    width: 750px;
+    height: 700px;
     overflow: auto;
+    border: 1px solid lightgray;
+    border-radius: 8px;
 }
 
-.coffee-shop-intro {
+/*.book-results {
+    margin-top: 40px;
+    width: 750px;
+    height: 700px;
+    overflow: auto;
+    border: 1px solid lightgray;
+    border-radius: 8px;
+}*/
+
+/*.coffee-shop-intro {
     width: 500px;
     margin-top: 40px;
     border-top: 1px solid black;
-}
+}*/
 
 #map {
-    width: 750px;
-    height: 700px;
     display: inline-block;
-    border: 1px solid black;
 }
 
-#reviews {
+.question {
+    margin-bottom: 31px;
+}
+
+/*coffee shop google user reviews*/
+#coffee-shop-reviews {
+    margin-top: 40px;
     width: 225px;
     height: 700px;
     display: inline-block;
-    border: 1px solid black;
+    border: 1px solid lightgray;
     overflow: auto;
+    border-radius: 8px;
 }
 
-.reviews-border {
+.coffee-reviews-border {
     border-bottom: 1px solid black;
 }
 
-.reviews-background {
+.coffee-reviews-background {
     background-color: #cccccc;
 }
 
-#coffe-shop-input {
+#coffe-shop-search {
     width: 325px;
     height: 27px;
     margin-top: 10px;
